# simpleRasterizer

./: CMakeLists.txt  Matrix.h  ThreadPool.h  Triangle.cpp  Triangle.h  camera.cpp  camera.h  main.cpp  rasterizer.cpp  rasterizer.h  simpleWindow.cpp  simpleWindow.h  vec.cpp  vec.h
.xinliu/: config.json
include/: GPURasterizer.h  Point.h  camera.h  lightShader.h  model.h  rasterizer.h  simpleWindow.h
src/: GPURasterizer.cpp  Matrix.cpp  Point.cpp  lightShader.cpp  main.cpp  model.cpp  rasterizer.cpp  simpleWindow.cpp
